force-app/main/default/objects/custom_create122__c/custom_create122__c.object-meta.xml
<CustomObject>
    <label>Custom created object122</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects122</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>