force-app/main/default/objects/custom_create122__c/fields/custom_create_122field618__c.field-meta.xml
<CustomField>
    <fullName>custom_create_122field618__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 122field618</label>
    <type>Checkbox</type>
</CustomField>